--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <img
                             class="main-img"
                             src="./images/info.png"
-                            alt="common"
+                            alt="info"
                         />
                     </picture>
                 </div>
