--- a/index.html
+++ b/index.html
@@ -371,17 +371,17 @@
         <div class="social">
                     <a href="#" class="wrap-link">
                         <svg width="25" height="25" class="social-link">
-                            <use href="/images/symbol-defs.svg#icon-instagram"/>
+                            <use href="images/symbol-defs.svg#icon-instagram"/>
                         </svg>
                     </a>
                     <a href="#" class="wrap-link"><svg width="25" height="25" class="social-link">
-                            <use href="/images/symbol-defs.svg#icon-facebook"/>
+                            <use href="images/symbol-defs.svg#icon-facebook"/>
                         </svg></a>
                     <a href="#" class="wrap-link"><svg width="25" height="25" class="social-link">
-                            <use href="/images/symbol-defs.svg#icon-twitter"/>
+                            <use href="images/symbol-defs.svg#icon-twitter"/>
                         </svg></a>
                     <a href="#" class="wrap-link"><svg width="25" height="25" class="social-link">
-                            <use href="/images/symbol-defs.svg#icon-linkedin"/>
+                            <use href="images/symbol-defs.svg#icon-linkedin"/>
                         </svg></a>
                 </div>
     </footer>
